
syntax = "proto3";

option csharp_namespace = "MusicMicroservice";

import "LibraryEntities.proto";


service LibraryGrpcService {
	rpc AddLibrary (AddLibraryRequest) returns (AddLibraryResponse);
	rpc GetLibrarySongs (GetLibrarySongsRequest) returns (GetLibrarySongsResponse);
	rpc GetPopularityRankings(GetPopularityRankingRequest) returns (GetPopularityRankingResponse);
	rpc AddSongToLibrary(AddSongToLibraryRequest) returns (AddSongToLibraryResponse);
	rpc RemoveSongFromLibrary (RemoveSongFromLibraryRequest) returns (RemoveSongFromLibraryResponse);
	rpc GetRecommendedSongs (GetRecommendedSongsRequest) returns (GetRecommendedSongsResponse);

}